--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,11 +89,11 @@ LastLevel=/Game/Maps/TheMapOfDoors
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=180.000
+ScreenPosition=X=96.000 Y=80.000
 WindowSize=X=1300.000 Y=740.000
-WindowSize=X=1340.000 Y=780.000
+WindowSize=X=1360.000 Y=800.000
 None=======
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -115,7 +115,7 @@ None=======
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
-GenericImport=Z:/ClassFiles/Cnit 48101/CGT445/External Assets/Bare_DFrame.fbx
+GenericImport=C:/Users/Alex/Desktop/Gith/CGT445/External Assets/Texture Imports/floor for level room.jpg
 GenericExport=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericOpen=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericSave=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -986,14 +986,16 @@ SynthBenchmark.TimeStamp=2017.02.03-01.08.11
 SynthBenchmark.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2017.01.20-19.07.28
 NewLevelDialog.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2017.01.20-19.07.27
-MovieSceneCapture.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2017.01.20-19.07.11
-BlueprintGraph.LastCompileMethod=Unknown
-StaticMeshEditor.TimeStamp=2017.01.20-19.07.36
-StaticMeshEditor.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2017.02.03-01.07.51
+MovieSceneCapture.LastCompileMethod=External
+BlueprintGraph.TimeStamp=2017.02.03-01.07.12
+BlueprintGraph.LastCompileMethod=External
+StaticMeshEditor.TimeStamp=2017.02.03-01.08.10
+StaticMeshEditor.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2017.01.20-19.07.23
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2017.02.03-01.07.44
+MaterialEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/TheMapOfDoors
@@ -1001,7 +1003,7 @@ MRUItem1=/Game/Maps/Opening_Level
 MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailPropertyExpansion]
-Brush="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 StaticMeshActor=
 
 [DetailCategories]
@@ -1144,8 +1146,39 @@ FbxScene_Lever_C.TransformCommon=True
 FbxScene_Lever_C.Rendering=True
 FbxScene_Lever_C.Input=True
 FbxScene_Lever_C.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.MaterialInterface=True
+PreviewMaterial.Thumbnail=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+FbxSceneImportOptions.ImportOptions=True
+FbxSceneImportOptions.Meshes=True
+FbxSceneImportOptions.Material=True
+FbxScene_Floor_C.TransformCommon=True
+FbxScene_Floor_C.Rendering=True
+FbxScene_Floor_C.Input=True
+FbxScene_Floor_C.Actor=True
+FbxScene_Floor_C.Tick=True
+FbxScene_Floor_C.Replication=True
+FbxScene_wallside_C.TransformCommon=True
+FbxScene_wallside_C.Rendering=True
+FbxScene_wallside_C.Input=True
+FbxScene_wallside_C.Actor=True
+FbxScene_wallside_C.Tick=True
+FbxScene_wallside_C.Replication=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/FbxScene_wallside.FbxScene_wallside;
+RecentlyPlaced=/Game/Geometry/floor_for_level_room.floor_for_level_room;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Geometry/Bare_DFrame.Bare_DFrame;
 RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
@@ -1187,16 +1220,59 @@ bPreserveLocalTransform=False
 bDeleteExistingMorphTargetCurves=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/arm.arm=1
 /Game/M4A1.M4A1=1
+/Game/Geometry/Meshes/TemplateFloor.TemplateFloor=1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[MaterialEditor]
+LightDir=P=-39.999985 Y=27.499983 R=0.000000
+PrimType=1
+
+[/Script/UnrealEd.FbxSceneImportOptions]
+bCreateContentFolderHierarchy=False
+bImportAsDynamic=False
+HierarchyType=FBXSOCHT_CreateBlueprint
+bBakePivotInVertex=False
+bImportStaticMeshLODs=False
+bImportSkeletalMeshLODs=False
+bInvertNormalMaps=False
+
+[/Script/UnrealEd.FbxSceneImportOptionsStaticMesh]
+bAutoGenerateCollision=True
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+NormalImportMethod=FBXSceneNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+
+[/Script/UnrealEd.FbxSceneImportOptionsSkeletalMesh]
+bCreatePhysicsAsset=False
+bPreserveSmoothingGroups=False
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+bKeepOverlappingVertices=False
+bImportAnimations=True
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bPreserveLocalTransform=False
+bDeleteExistingMorphTargetCurves=False
 
 
