Opening Level creation
I did some work and make at least the start of a level, it'd need an
artistic, or at least some fine tweaking to make it look spot on but for
now it's there, and ready for the start of some coding. I also created
the main walkway.

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -59,6 +59,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 CurrentRotGridSize=0
 CurrentScalingGridSize=6
+CurrentRotGridMode=GridMode_DivisionsOf360
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -78,7 +79,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Geometry
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Meshes
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -91,7 +92,7 @@ CleanShutdown=True
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
 WindowSize=X=1300.000 Y=740.000
-WindowSize=X=1330.000 Y=770.000
+WindowSize=X=1340.000 Y=780.000
 None=======
 InitiallyMaximized=True
 
@@ -115,7 +116,7 @@ None=======
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
-GenericImport=Z:/ClassFiles/Cnit 48101/CGT445/External Assets/Bare_DFrame.fbx
+GenericImport=Z:/ClassFiles/Cnit 48101/CGT445/External Assets/Walkway.fbx
 GenericExport=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericOpen=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericSave=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -994,6 +995,8 @@ StaticMeshEditor.TimeStamp=2017.01.20-19.07.36
 StaticMeshEditor.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2017.01.20-19.07.23
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2017.01.20-19.07.25
+MaterialEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Opening_Level
@@ -1001,7 +1004,7 @@ MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailPropertyExpansion]
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
-StaticMeshActor=
+StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride" "Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials" "Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings" "Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels" "Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance" "Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -1103,9 +1106,9 @@ StaticMesh.LodSettings=True
 StaticMesh.StaticMesh=True
 StaticMesh.ImportSettings=True
 StaticMesh.Transform=True
-StaticMesh.Thumbnail=True
-StaticMesh.Collision=True
-StaticMesh.Navigation=True
+StaticMesh.Thumbnail=False
+StaticMesh.Collision=False
+StaticMesh.Navigation=False
 PlayerStart.TransformCommon=True
 PlayerStart.Object=True
 PlayerStart.Rendering=True
@@ -1127,8 +1130,33 @@ AtmosphericFog.Lighting=True
 AtmosphericFog.Rendering=True
 AtmosphericFog.Tags=True
 AtmosphericFog.Actor=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Light Profiles=True
+SpotLight.Lightmass=True
+SpotLight.LightFunction=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.Rendering=True
+SpotLight.Tags=True
+SpotLight.Actor=True
+StaticMeshActor.Mobile=True
+StaticMeshActor.Navigation=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/Geometry/Walkway.Walkway;
 RecentlyPlaced=/Game/Geometry/Bare_DFrame.Bare_DFrame;
 RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
 RecentlyPlaced=/Game/FirstPerson/FPWeapon/Materials/MaterialLayers/T_ML_FineRubber.T_ML_FineRubber;
@@ -1136,7 +1164,6 @@ RecentlyPlaced=/Game/FirstPerson/FPWeapon/Materials/MaterialLayers/T_ML_Aluminum
 RecentlyPlaced=/Game/FirstPerson/FPWeapon/Materials/MaterialLayers/T_ML_Aluminum01.T_ML_Aluminum01;
 RecentlyPlaced=/Game/FirstPerson/FPWeapon/Materials/M_FPGun.M_FPGun;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 
 [/Script/UnrealEd.FbxStaticMeshImportData]
@@ -1175,10 +1202,65 @@ LastLogListing=MapCheck
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/arm.arm=1
 /Game/M4A1.M4A1=1
+/Game/FirstPerson/Meshes/FirstPersonProjectileMesh.FirstPersonProjectileMesh=1
+/Game/FirstPerson/Meshes/FirstPersonProjectileMaterial.FirstPersonProjectileMaterial=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube65=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube66=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube67=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube68=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube69=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube70=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube71=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube72=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube73=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube74=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube75=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube76=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube77=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube78=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube79=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube80=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube61=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube62=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube63=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube64=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube60=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube59=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube58=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube53=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube49=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube50=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube52=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube51=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube54=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube55=1
+/Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube56=1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[FEditorModeTools]
+CoordSystem=1
+
+[DetailCategoriesAdvanced]
+StaticMeshActor.Collision=True
+
+[MaterialInstanceEditor]
+LightDir=P=-39.999985 Y=27.499983 R=0.000000
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+bWantsMobileStats=False
+
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+StaticMeshActor=StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24.000000
+Property=0.500000
+Value=1.000000
 
 
