Moving some assests around to correct positions
I made sure all my assets where now together with the others

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,13 +87,13 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Opening_Level
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=96.000 Y=80.000
 WindowSize=X=1300.000 Y=740.000
 WindowSize=X=1340.000 Y=780.000
-WindowSize=X=1380.000 Y=820.000
+WindowSize=X=1390.000 Y=830.000
 None=======
 None=======
 InitiallyMaximized=False
@@ -1158,6 +1158,10 @@ StaticMeshComponent.Collision=True
 StaticMeshComponent.Lighting=True
 StaticMeshComponent.Rendering=True
 StaticMeshComponent.Tags=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
