--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Meshes
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -87,16 +87,16 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Opening_Level
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=96.000 Y=80.000
+ScreenPosition=X=2016.000 Y=80.000
 WindowSize=X=1300.000 Y=740.000
 WindowSize=X=1340.000 Y=780.000
-WindowSize=X=1390.000 Y=830.000
+WindowSize=X=1400.000 Y=840.000
 None=======
 None=======
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1003,6 +1003,8 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2017.01.20-19.07.25
 MaterialEditor.TimeStamp=2017.02.03-01.07.44
 MaterialEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2017.01.20-19.07.34
+SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Opening_Level
@@ -1162,6 +1164,62 @@ BoolProperty.Variable=True
 BoolProperty.DefaultValueCategory=True
 FloatProperty.Variable=True
 FloatProperty.DefaultValueCategory=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+K2Node_InputTouch.Input=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Performance=True
+VerticalBox.Render Transform=True
+VerticalBox.Navigation=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Performance=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Navigation=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Performance=True
+ProgressBar.Render Transform=True
+ProgressBar.Navigation=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Performance=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Navigation=True
+Hud_C.Appearance=True
+Hud_C.Interaction=True
+Hud_C.Input=True
+Hud_C.Designer=True
+Hud_C.Layout=True
+Hud_C.Behavior=True
+Hud_C.Performance=True
+Hud_C.Render Transform=True
+Hud_C.Navigation=True
+ObjectProperty.Events=True
+K2Node_VariableSet.Events=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -1297,6 +1355,7 @@ LastLogListing=FBXImport
 /Game/Maps/Opening_Level.Opening_Level:PersistentLevel.Cube56=1
 None=======
 /Game/Geometry/Meshes/TemplateFloor.TemplateFloor=1
+/Game/HUD/Hud.Hud=1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1367,5 +1426,19 @@ bUseDefaultSampleRate=False
 bImportCustomAttribute=True
 bPreserveLocalTransform=False
 bDeleteExistingMorphTargetCurves=False
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Optimization=False
+Panel=True
+Primitive=False
+Uncategorized=False
+User Created=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
 
 
