--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,12 +78,12 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/NewWorld
+LastLevel=/Game/Maps/PlayableLevel
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -91,7 +91,7 @@ CleanShutdown=True
 [RootWindow]
 ScreenPosition=X=96.000 Y=80.000
 WindowSize=X=1300.000 Y=740.000
-WindowSize=X=1370.000 Y=810.000
+WindowSize=X=1380.000 Y=820.000
 None=======
 InitiallyMaximized=True
 
@@ -999,24 +999,26 @@ MaterialEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/PlayableLevel
-MRUItem1=/Game/Maps/NewWorld
-MRUItem2=/Game/Maps/TheMapOfDoors
-MRUItem3=/Game/Maps/Opening_Level
-MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/Maps/LeverRoom
+MRUItem2=/Game/Maps/StartingRoom
+MRUItem3=/Game/Maps/NewWorld
+MRUItem4=/Game/Maps/TheMapOfDoors
+MRUItem5=/Game/Maps/Opening_Level
+MRUItem6=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailPropertyExpansion]
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 StaticMeshActor=
 MotionControllerComponent=
-PrimitiveComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-SceneComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-ActorComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+PrimitiveComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+SceneComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+ActorComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 Object=
-SkeletalMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-SkinnedMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-MeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-SphereComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-ShapeComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+MeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 
 [DetailCategories]
 Brush.TransformCommon=True
