Fixed starting room, fixed lever room, created compile room to string levels together

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,7 +83,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/PlayableLevel
+LastLevel=/Game/Maps/Compile
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -91,7 +91,7 @@ CleanShutdown=True
 [RootWindow]
 ScreenPosition=X=96.000 Y=80.000
 WindowSize=X=1300.000 Y=740.000
-WindowSize=X=1380.000 Y=820.000
+WindowSize=X=1390.000 Y=830.000
 None=======
 InitiallyMaximized=True
 
@@ -121,7 +121,7 @@ GenericOpen=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericSave=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 MeshImportExport=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 WorldRoot=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
-Level=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
+Level=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
 Project=C:/Program Files (x86)/Epic Games/4.12/
 
 [ModuleFileTracking]
@@ -996,29 +996,34 @@ HierarchicalLODUtilities.TimeStamp=2017.01.20-19.07.23
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2017.02.03-01.07.44
 MaterialEditor.LastCompileMethod=Unknown
+WorldBrowser.TimeStamp=2017.01.14-16.47.01
+WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/PlayableLevel
-MRUItem1=/Game/Maps/LeverRoom
-MRUItem2=/Game/Maps/StartingRoom
-MRUItem3=/Game/Maps/NewWorld
-MRUItem4=/Game/Maps/TheMapOfDoors
-MRUItem5=/Game/Maps/Opening_Level
-MRUItem6=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/Maps/Compile
+MRUItem1=/Game/Maps/StartingRoom
+MRUItem2=/Game/Maps/PlayableLevel
+MRUItem3=/Game/Maps/LeverRoom
+MRUItem4=/Game/Maps/NewWorld
+MRUItem5=/Game/Maps/TheMapOfDoors
+MRUItem6=/Game/Maps/Opening_Level
+MRUItem7=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailPropertyExpansion]
-Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+Brush="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
 StaticMeshActor=
 MotionControllerComponent=
 PrimitiveComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 SceneComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 ActorComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
-Object=
+Object="Object.LightmassSettings" 
 SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 MeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+LightmassPrimitiveSettingsObject="Object.LightmassSettings" 
+TextRenderActor="Object.TextRenderActor.TextRender.Object.Text.TextRenderColor" 
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -1250,28 +1255,74 @@ LandscapeGizmoActiveActor.Gizmo=True
 LandscapeGizmoActiveActor.Rendering=True
 LandscapeGizmoActiveActor.Input=True
 LandscapeGizmoActiveActor.Actor=True
+FbxScene_doorway_C.TransformCommon=True
+FbxScene_doorway_C.Rendering=True
+FbxScene_doorway_C.Input=True
+FbxScene_doorway_C.Actor=True
+Actor.Input=True
+Actor.Surface Materials=True
+Actor.Geometry=True
+Actor.Surface Properties=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Rendering=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Tags=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+LoadPlayableLevel_C.TransformCommon=True
+LoadPlayableLevel_C.Shape=True
+LoadPlayableLevel_C.Navigation=True
+LoadPlayableLevel_C.Rendering=True
+LoadPlayableLevel_C.Physics=True
+LoadPlayableLevel_C.Collision=True
+LoadPlayableLevel_C.Tags=True
+LoadPlayableLevel_C.Input=True
+LoadPlayableLevel_C.Actor=True
+LoadPlayableLevel_C.Tick=True
+LoadPlayableLevel_C.Replication=True
+REINST_LoadPlayableLevel_C_73.TransformCommon=True
+REINST_LoadPlayableLevel_C_73.Shape=True
+REINST_LoadPlayableLevel_C_73.Navigation=True
+REINST_LoadPlayableLevel_C_73.Rendering=True
+REINST_LoadPlayableLevel_C_73.Physics=True
+REINST_LoadPlayableLevel_C_73.Collision=True
+REINST_LoadPlayableLevel_C_73.Tags=True
+REINST_LoadPlayableLevel_C_73.Input=True
+REINST_LoadPlayableLevel_C_73.Actor=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Physics=True
+WorldSettings.Lightmass=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
+RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling;
+RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/StarterContent/Props/SM_Door.SM_Door;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
 RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Blueprints/Assets/M_LightStage_Skybox_HDRI.M_LightStage_Skybox_HDRI;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Assets/M_LightStage_Arrows.M_LightStage_Arrows;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Assets/M_LightStage_Skybox_Black.M_LightStage_Skybox_Black;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Assets/M_LightStage_Skybox_Master.M_LightStage_Skybox_Master;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Assets/Skybox.Skybox;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
 RecentlyPlaced=/Game/Geometry/FbxScene_wallside.FbxScene_wallside;
 RecentlyPlaced=/Game/Geometry/floor_for_level_room.floor_for_level_room;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Geometry/Bare_DFrame.Bare_DFrame;
-RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
-RecentlyPlaced=/Game/FirstPerson/FPWeapon/Materials/MaterialLayers/T_ML_FineRubber.T_ML_FineRubber;
-RecentlyPlaced=/Game/FirstPerson/FPWeapon/Materials/MaterialLayers/T_ML_Aluminum01_N.T_ML_Aluminum01_N;
-RecentlyPlaced=/Game/FirstPerson/FPWeapon/Materials/MaterialLayers/T_ML_Aluminum01.T_ML_Aluminum01;
-RecentlyPlaced=/Game/FirstPerson/FPWeapon/Materials/M_FPGun.M_FPGun;
 
 [/Script/UnrealEd.FbxStaticMeshImportData]
 VertexColorImportOption=Ignore
@@ -1303,13 +1354,14 @@ bPreserveLocalTransform=False
 bDeleteExistingMorphTargetCurves=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=MapCheck
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/arm.arm=1
 /Game/M4A1.M4A1=1
 /Game/Geometry/Meshes/TemplateFloor.TemplateFloor=1
+/Game/LoadPlayableLevel.LoadPlayableLevel=1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1375,5 +1427,16 @@ SmoothFilterKernelSize=4
 MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
+
+[WorldBrowser]
+DisplayPaths=False
+DisplayActorsCount=False
+
+[SuppressableDialogs]
+WarnOnHiddenLevelsBeforeRebuild=False
+RemoveLevelWarning=False
+
+[DetailCustomWidgetExpansion]
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 
