--- a/Game.old/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game.old/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,7 +83,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/Compile
+LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -91,7 +91,7 @@ CleanShutdown=True
 [RootWindow]
 ScreenPosition=X=96.000 Y=80.000
 WindowSize=X=1300.000 Y=740.000
-WindowSize=X=1390.000 Y=830.000
+WindowSize=X=1400.000 Y=840.000
 None=======
 InitiallyMaximized=True
 
@@ -1010,20 +1010,20 @@ MRUItem6=/Game/Maps/Opening_Level
 MRUItem7=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailPropertyExpansion]
-Brush="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 StaticMeshActor=
 MotionControllerComponent=
 PrimitiveComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 SceneComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 ActorComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
-Object="Object.LightmassSettings" 
+Object=Object.LightmassSettings
 SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 MeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
 ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
-LightmassPrimitiveSettingsObject="Object.LightmassSettings" 
-TextRenderActor="Object.TextRenderActor.TextRender.Object.Text.TextRenderColor" 
+LightmassPrimitiveSettingsObject=Object.LightmassSettings
+TextRenderActor=Object.TextRenderActor.TextRender.Object.Text.TextRenderColor
 
 [DetailCategories]
 Brush.TransformCommon=True
