--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,16 +79,18 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Shapes
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/Maps/BarebonesCafeteria
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=22.000 Y=133.000
-WindowSize=X=1352.000 Y=740.000
+ScreenPosition=X=524.000 Y=58.000
+WindowSize=X=1362.000 Y=749.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -556,6 +558,7 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/BarebonesCafeteria
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -586,11 +589,29 @@ PlayerStart.Object=True
 PlayerStart.Rendering=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Physics=True
+WorldSettings.Lightmass=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.Lighting=True
+TextRenderActor.Tags=True
+TextRenderActor.Input=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
-RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Tube.Shape_Tube;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Plane.Shape_Plane;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
+RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube.1M_Cube;
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Tube.Shape_Tube;
 
 [MessageLog]
 LastLogListing=MapCheck
