sorted out the main menu

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -21,7 +21,7 @@ PIEAlwaysOnTop=False
 StandaloneWindowPosition=(X=0,Y=0)
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
@@ -39,7 +39,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@SCOTT-PC
 LastExecutedLaunchName=SCOTT-PC
-NewWindowPosition=(X=315,Y=163)
+NewWindowPosition=(X=123,Y=55)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -84,13 +84,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/Maps/BarebonesCafeteria
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/MainMenu.MainMenu
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode
+OpenAssetsAtExit=/Game/Blueprints/HUD.HUD
 
 [RootWindow]
 ScreenPosition=X=524.000 Y=58.000
@@ -565,8 +565,10 @@ MovieSceneCapture.TimeStamp=2017.01.14-16.44.54
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/Maps/BarebonesCafeteria
+MRUItem0=/Game/Maps/BarebonesCafeteria
+MRUItem1=/Game/Maps/Main
+MRUItem2=/Game/Blueprints/Main
+MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -693,6 +695,38 @@ FoodFightersChar_C.PlanarMovement=True
 FoodFightersChar_C.MovementComponent=True
 FoodFightersChar_C.Shape=True
 FoodFightersChar_C.Navigation=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Performance=True
+Image.Render Transform=True
+Image.Navigation=True
+Image.Events=True
+ObjectProperty.Variable=True
+Main_C.Tick=True
+Main_C.Replication=True
+Main_C.Input=True
+Main_C.Actor=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+FoodFightersGM_C.Default=True
+FirstPersonExampleMap_C.Tick=True
+FirstPersonExampleMap_C.Replication=True
+FirstPersonExampleMap_C.Input=True
+FirstPersonExampleMap_C.Actor=True
+HUD_C.Appearance=True
+HUD_C.Interaction=True
+HUD_C.Input=True
+HUD_C.Designer=True
+HUD_C.Layout=True
+HUD_C.Behavior=True
+HUD_C.Performance=True
+HUD_C.Render Transform=True
+HUD_C.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -704,12 +738,26 @@ RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryText
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Tube.Shape_Tube;
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Optimization=False
+Panel=False
+Primitive=False
+Uncategorized=False
+User Created=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
 
 
