Table made but couldn't sync

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Import
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -90,9 +90,9 @@ LastLevel=/Game/Maps/BarebonesCafeteria
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=524.000 Y=58.000
-WindowSize=X=1392.000 Y=779.000
-InitiallyMaximized=True
+ScreenPosition=X=135.000 Y=82.000
+WindowSize=X=1412.000 Y=799.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -560,6 +560,8 @@ BlueprintGraph.TimeStamp=2017.02.03-01.07.12
 BlueprintGraph.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2017.02.03-01.07.51
 MovieSceneCapture.LastCompileMethod=External
+SynthBenchmark.TimeStamp=2017.02.03-01.08.11
+SynthBenchmark.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/BarebonesCafeteria
@@ -724,8 +726,12 @@ HUD_C.Behavior=True
 HUD_C.Performance=True
 HUD_C.Render Transform=True
 HUD_C.Navigation=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Material=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Import/Table_for_Cafe.Table_for_Cafe;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
@@ -745,10 +751,9 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Hewn_Stone.M_Brick_Hewn_Stone;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -783,5 +788,34 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[/Script/UnrealEd.FbxStaticMeshImportData]
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bAutoGenerateCollision=True
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+NormalGenerationMethod=MikkTSpace
+
+[/Script/UnrealEd.FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bImportMeshesInBoneHierarchy=True
+bKeepOverlappingVertices=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+
+[/Script/UnrealEd.FbxTextureImportData]
+bInvertNormalMaps=False
+
+[/Script/UnrealEd.FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+bPreserveLocalTransform=False
+bDeleteExistingMorphTargetCurves=False
 
 
