Cafeteria properly scaled and lights added

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=82.000
-WindowSize=X=1412.000 Y=799.000
+WindowSize=X=1422.000 Y=809.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -729,8 +729,18 @@ HUD_C.Navigation=True
 FbxImportUI.Mesh=True
 FbxImportUI.Transform=True
 FbxImportUI.Material=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Light Profiles=True
+PointLight.Lightmass=True
+PointLight.LightFunction=True
+PointLight.DistanceFieldShadows=True
+PointLight.Rendering=True
+PointLight.Tags=True
+PointLight.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Import/Table_for_Cafe.Table_for_Cafe;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
@@ -750,7 +760,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_AssetPlatform.M_AssetPlatform;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Hewn_Stone.M_Brick_Hewn_Stone;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
 
 [MessageLog]
 LastLogListing=FBXImport
