--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Import
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -91,8 +91,8 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=82.000
-WindowSize=X=1422.000 Y=809.000
-InitiallyMaximized=False
+WindowSize=X=1432.000 Y=819.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -108,7 +108,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
+UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -562,6 +562,10 @@ MovieSceneCapture.TimeStamp=2017.02.03-01.07.51
 MovieSceneCapture.LastCompileMethod=External
 SynthBenchmark.TimeStamp=2017.02.03-01.08.11
 SynthBenchmark.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2017.01.14-16.43.36
+ExternalImagePicker.LastCompileMethod=Unknown
+PhAT.TimeStamp=2017.01.14-16.45.20
+PhAT.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/BarebonesCafeteria
@@ -738,6 +742,177 @@ PointLight.DistanceFieldShadows=True
 PointLight.Rendering=True
 PointLight.Tags=True
 PointLight.Actor=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+FoodProjectile_C.Default=True
+FoodProjectile_C.Tick=True
+FoodProjectile_C.Rendering=True
+FoodProjectile_C.Replication=True
+FoodProjectile_C.Input=True
+FoodProjectile_C.Actor=True
+K2Node_VariableGet.Events=True
+K2Node_InputTouch.Input=True
+K2Node_InputAction.Input=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+InputSettings.Bindings=True
+InputSettings.MouseProperties=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Console=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+FoodFightersChar_C.Variable=True
+FoodFightersChar_C.Sockets=True
+FoodFightersChar_C.Events=True
+PlayerController.TransformCommon=True
+PlayerController.PlayerController=True
+PlayerController.MouseInterface=True
+PlayerController.Game=True
+PlayerController.Input=True
+PlayerController.Actor=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.Events=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Events=True
+REINST_FoodFightersChar_C_138.Character Movement (General Settings)=True
+REINST_FoodFightersChar_C_138.Character Movement: Walking=True
+REINST_FoodFightersChar_C_138.Character Movement: Jumping / Falling=True
+REINST_FoodFightersChar_C_138.Character Movement: Swimming=True
+REINST_FoodFightersChar_C_138.Character Movement: Flying=True
+REINST_FoodFightersChar_C_138.Character Movement: Custom Movement=True
+REINST_FoodFightersChar_C_138.Character Movement: Physics Interaction=True
+REINST_FoodFightersChar_C_138.Character Movement (Networking)=True
+REINST_FoodFightersChar_C_138.Character Movement=True
+REINST_FoodFightersChar_C_138.Character Movement: Avoidance=True
+REINST_FoodFightersChar_C_138.Character Movement: NavMesh Movement=True
+REINST_FoodFightersChar_C_138.NavMovement=True
+REINST_FoodFightersChar_C_138.Velocity=True
+REINST_FoodFightersChar_C_138.PlanarMovement=True
+REINST_FoodFightersChar_C_138.MovementComponent=True
+REINST_FoodFightersChar_C_138.Tags=True
+REINST_FoodFightersChar_C_138.Activation=True
+REINST_FoodFightersChar_C_138.Variable=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+Blueprint.BlueprintOptions=True
+Blueprint.ClassOptions=True
+Blueprint.Interfaces=True
+Blueprint.Thumbnail=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Events=True
+SkeletalMeshComponent.Materials=True
+PrimitiveComponent.TransformCommon=True
+PrimitiveComponent.Materials=True
+PrimitiveComponent.Rendering=True
+PrimitiveComponent.Physics=True
+PrimitiveComponent.Collision=True
+PrimitiveComponent.Tags=True
+PrimitiveComponent.Variable=True
+REINST_FoodFightersChar_C_262.None=True
+REINST_FoodFightersChar_C_262.Tick=True
+REINST_FoodFightersChar_C_262.Character=True
+REINST_FoodFightersChar_C_262.Camera=True
+REINST_FoodFightersChar_C_262.Pawn=True
+REINST_FoodFightersChar_C_262.Rendering=True
+REINST_FoodFightersChar_C_262.Replication=True
+REINST_FoodFightersChar_C_262.Input=True
+REINST_FoodFightersChar_C_262.Actor=True
+PhATSimOptions.Anim=True
+PhATSimOptions.Simulation=True
+PhATSimOptions.MouseSpring=True
+PhATSimOptions.Poking=True
+PhATSimOptions.Advanced=True
+PhATSimOptions.Drawing=True
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.Mobile=False
+ObjectProperty.Events=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.PostProcess=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Actor=True
+PlayerState.Actor=True
+FirstPersonHUD_C.TransformCommon=True
+PlayerCameraManager.TransformCommon=True
+PlayerCameraManager.Rendering=True
+PlayerCameraManager.Tags=True
+PlayerCameraManager.Activation=True
+PlayerCameraManager.PlayerCameraManager=True
+PlayerCameraManager.Debug=True
+PlayerCameraManager.Input=True
+PlayerCameraManager.Actor=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+K2Node_SwitchInteger.PinOptions=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+FireProjectile_C.Default=True
+FireProjectile_C.Tick=True
+FireProjectile_C.Rendering=True
+FireProjectile_C.Replication=True
+FireProjectile_C.Input=True
+FireProjectile_C.Actor=True
+IceProjectile_C.Default=True
+IceProjectile_C.Tick=True
+IceProjectile_C.Rendering=True
+IceProjectile_C.Replication=True
+IceProjectile_C.Input=True
+IceProjectile_C.Actor=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -762,10 +937,15 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Hewn_Stone.M_Brick_Hewn_Stone;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
+/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset=1
+/Game/Blueprints/FoodProjectile.FoodProjectile=1
+/Game/Blueprints/FoodFightersChar.FoodFightersChar=1
+/Game/Blueprints/FireProjectile.FireProjectile=1
+/Game/Blueprints/IceProjectile.IceProjectile=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -826,5 +1006,32 @@ bImportCustomAttribute=True
 bSetMaterialDriveParameterOnCustomAttribute=False
 bPreserveLocalTransform=False
 bDeleteExistingMorphTargetCurves=False
+
+[DetailCategoriesAdvanced]
+FoodProjectile_C.Actor=True
+FoodProjectile_C.Tick=True
+SphereComponent.Collision=True
+FoodFightersChar_C.Actor=True
+FireProjectile_C.Actor=True
+IceProjectile_C.Actor=True
+
+[DetailPropertyExpansion]
+FoodProjectile_C=
+SphereComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+ShapeComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+PrimitiveComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+SceneComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+ActorComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+Object="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+FoodFightersChar_C=
+Character=
+Pawn=
+REINST_FoodFightersChar_C_205="Object.Actor.Tags" 
+SkeletalMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+SkinnedMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+MeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+REINST_FoodFightersChar_C_262="Object.Actor.Tags" 
+FireProjectile_C="Object.Actor.Tags" 
+IceProjectile_C="Object.Actor.Tags" 
 
 
