--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Imported_Content
+ContentBrowserTab1.SelectedPaths=/Game/Imported_Content/All_the_guns
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -90,9 +90,9 @@ LastLevel=/Game/Maps/BarebonesCafeteria
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=790.000 Y=13.000
-WindowSize=X=1492.000 Y=880.000
-InitiallyMaximized=True
+ScreenPosition=X=84.000 Y=58.000
+WindowSize=X=1532.000 Y=920.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -112,7 +112,7 @@ UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
-GenericImport=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
+GenericImport=C:/Users/Alex/Desktop/Whion 2017-04-01 at 1.14.41 PM/Gun/gun.obj
 GenericExport=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericOpen=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericSave=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -568,6 +568,8 @@ PhAT.TimeStamp=2017.01.14-16.45.20
 PhAT.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2017.01.14-16.45.50
 SequencerWidgets.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2017.02.03-01.08.10
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/BarebonesCafeteria
@@ -1008,31 +1010,39 @@ FbxImportUI.Animation=True
 FirstPersonCharacter_C.Default=True
 FirstPersonCharacter_C.Tick=True
 FirstPersonCharacter_C.Replication=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.ImportSettings=True
+StaticMesh.Transform=True
+StaticMesh.Thumbnail=True
+StaticMesh.Collision=True
+StaticMesh.Navigation=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/RevolverSkin.RevolverSkin;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt_Colt_Gun1SGMat.Colt_Colt_Gun1SGMat;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt_Colt_BackStrapSGMat.Colt_Colt_BackStrapSGMat;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt_Colt_blinn1SGMat.Colt_Colt_blinn1SGMat;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt_Colt_blinn2SGMat.Colt_Colt_blinn2SGMat;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/Diffuse.Diffuse;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/Assault_Rifle.Assault_Rifle;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt.Colt;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/Revolver.Revolver;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/ppsh41_0.ppsh41_0;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/glocki.glocki;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/glock.glock;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/tex_Mat.tex_Mat;
+RecentlyPlaced=/Game/Imported_Content/All_the_guns/defaultMat.defaultMat;
 RecentlyPlaced=/Game/Imported_Content/enhanced-17040-1446660609-11.enhanced-17040-1446660609-11;
 RecentlyPlaced=/Game/Imported_Content/motivation.motivation;
 RecentlyPlaced=/Game/Imported_Content/winners_never_quit.winners_never_quit;
 RecentlyPlaced=/Game/Imported_Content/main_word.main_word;
 RecentlyPlaced=/Game/Imported_Content/Other_Stuff/Dgart_Wallpaper04_jpg/Dgart_Wallpaper04.Dgart_Wallpaper04;
 RecentlyPlaced=/Game/Imported_Content/Posters/FNAF_Inspired_posters/1/poster_1.poster_1;
-RecentlyPlaced=/Game/Imported_Content/Posters/FNAF_Inspired_posters/1/poster_1_Mat.poster_1_Mat;
-RecentlyPlaced=/Game/Imported_Content/Posters/FNAF_Inspired_posters/1/1.1;
-RecentlyPlaced=/Game/Imported_Content/floor_tiles.floor_tiles;
-RecentlyPlaced=/Game/Imported_Content/Other_Stuff/Coffee_table/Coffeet2OBJ/Coffeet2.Coffeet2;
-RecentlyPlaced=/Game/Imported_Content/Dgart_Wallpaper04.Dgart_Wallpaper04;
-RecentlyPlaced=/Game/Imported_Content/DSC_0119_Mat.DSC_0119_Mat;
-RecentlyPlaced=/Game/Imported_Content/Other_Stuff/maps/3.3;
-RecentlyPlaced=/Game/Imported_Content/Other_Stuff/maps/2.2;
-RecentlyPlaced=/Game/Imported_Content/Other_Stuff/maps/1.1;
-RecentlyPlaced=/Game/Imported_Content/DSC_0119.DSC_0119;
-RecentlyPlaced=/Game/Imported_Content/Whion_2017-03-29_at_4_37_31_PM/FNAF_Inspired_posters/1/1.1;
-RecentlyPlaced=/Game/Imported_Content/ceiling_texture.ceiling_texture;
-RecentlyPlaced=/Game/Imported_Content/1-floreal-blue-wallpaper-texture-seamless-2.1-floreal-blue-wallpaper-texture-seamless-2;
-RecentlyPlaced=/Game/Imported_Content/Whion_2017-03-29_at_4_37_31_PM/Teen_Poster_zip/Teen_Poster/poster6.poster6;
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1050,6 +1060,7 @@ LastLogListing=MapCheck
 /Game/Maps/Main.Main:PersistentLevel.Main=1
 /Game/Blueprints/UI/MainMenu.MainMenu=1
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
+/Game/Imported_Content/All_the_guns/Colt.Colt=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
